argocd/k8s/frontend/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: microservice-app-example
  name: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: microservice-app-example
        service: frontend
    spec:
      containers:
      - env:
        - name: AUTH_API_ADDRESS
          value: http://auth-api:8081
        - name: PORT
          value: "8080"
        - name: TODOS_API_ADDRESS
          value: http://todos-api:8082
        - name: ZIPKIN_URL
          value: http://zipkin:9411/api/v2/spans
        image: image-registry.openshift-image-registry.svc:5000/laboratorio/frontend:1.0.0
        name: frontend
        ports:
        - containerPort: 8080
        imagePullPolicy: Never
      restartPolicy: Always
