argocd/k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: microservice-app-example
  name: frontend
spec:
  ports:
  - port: 8080
  selector:
    service: frontend
