argocd/k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: microapp-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - microapp.ibmcloud.ingeniamos.com
      secretName: cjoc-ingress-tls
  rules:
    - host: microapp.ibmcloud.ingeniamos.com
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 8080
